# alliedimpact

./: .firebaserc  .gitignore  .temp-archetype-activation.ts  API_FUNCTIONS_FIX.md  CLEANUP_PLAN_FEB_2026.md  CORRECTED_PLATFORM_AUDIT.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  ENV_VARIABLES_TEMPLATE.md  ENV_VERCEL_IMPORT_GUIDE.md  LAUNCH_READINESS_REPORT_FEB_2026.md  LOCKFILE_ERROR_FIX.md  PLATFORM_AUDIT_FIXES_COMPLETE.md  PLATFORM_AUDIT_REPORT_APRIL_2026.md  PROGRESS_REPORT_10_10_PUSH.md  README.md  SECURITY_ARCHITECTURE_AUDIT.md  TEST_COVERAGE_STATUS_REPORT.md  TYPESCRIPT_FIXES_REPORT.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_MONOREPO_FIX.md  WORKSPACE_CONFIG_FIX.md  build-output.txt  check-all-ts.ps1  check-tests.ps1  check-ts-all-8.ps1  check-ts-errors.ps1  commit-and-push.ps1  commit-animations.ps1  commit-careerbox.ps1  commit-fix.ps1  commit-lockfile-fix.ps1  commit-lockfile.ps1  commit.bat  fix-lockfile.ps1  install-log.txt  install.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  (+4 more)
.docs-archive-2025-12-17/: ALLIED_IMPACT_TRANSFORMATION_PLAN.md  CURRENT_STATUS.md  DIRECTORY_STRUCTURE_COMPARISON.md  EXECUTIVE_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_GUIDE_NEW_REPO.md  IMPLEMENTATION_ROADMAP.md  NEXT_STEPS.md  PHASE_2_COMPLETE.md  QUICK_REFERENCE_TRANSFORMATION.md  QUICK_START.md  README_INDEX.md  RISK_ASSESSMENT.md  SETUP_PROGRESS.md  STATUS.md  TYPESCRIPT_FIXES.md
apps/coinbox/sdks/python/: README.md  pyproject.toml
apps/coinbox/sdks/python/coinbox/: __init__.py
docs/: ALIGNMENT_REVIEW_JAN2026.md  ALLIED_IMPACT_PLATFORM_MODEL.md  DEVELOPER_GUIDE.md  (+16 more)
(+1468 files in other folders)
