[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coinbox-python"
version = "1.0.0"
description = "Official Python SDK for Coin Box API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Coin Box", email = "api@coinbox.com"}
]
keywords = ["coinbox", "api", "sdk", "finance", "loans", "investments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://coinbox.example.com"
Documentation = "https://coinbox.example.com/docs"
Repository = "https://github.com/coinbox/coinbox-python"
